# bigData-Class

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
Notebook/: 01_read_data.ipynb  01_read_filter_data.ipynb  02_agrupar_por_lat_lon.ipynb  03_Map_par mostrar.ipynb  03_map_cuadros_folium.html  ejercicio1.py  ejercicio2.py  ejercicio4.py  map_reduce_votaciones.ipynb  votos_actas.txt  votos_sueltos.txt
Notebook/biodiversidad_clusters.parquet/: .part-00000-77a179cc-9ef4-4a62-a29a-3b0d0a4d37ad-c000.snappy.parquet.crc  .part-00000-ee3a6125-58d6-4d14-a93e-32b58e0a6f1a-c000.snappy.parquet.crc  .part-00001-77a179cc-9ef4-4a62-a29a-3b0d0a4d37ad-c000.snappy.parquet.crc  .part-00001-ee3a6125-58d6-4d14-a93e-32b58e0a6f1a-c000.snappy.parquet.crc  part-00000-77a179cc-9ef4-4a62-a29a-3b0d0a4d37ad-c000.snappy.parquet  part-00000-ee3a6125-58d6-4d14-a93e-32b58e0a6f1a-c000.snappy.parquet  part-00001-77a179cc-9ef4-4a62-a29a-3b0d0a4d37ad-c000.snappy.parquet  part-00001-ee3a6125-58d6-4d14-a93e-32b58e0a6f1a-c000.snappy.parquet
Notebook/biodiversidad_especies_por_punto.parquet/: .part-00000-82e09fbd-335d-4afb-9a58-5bacf5655c16-c000.snappy.parquet.crc  part-00000-82e09fbd-335d-4afb-9a58-5bacf5655c16-c000.snappy.parquet
Notebook/biodiversidad_limpa.parquet/: .part-00000-70e30524-508e-4c96-a81a-18c338527bcb-c000.snappy.parquet.crc  .part-00001-70e30524-508e-4c96-a81a-18c338527bcb-c000.snappy.parquet.crc  part-00000-70e30524-508e-4c96-a81a-18c338527bcb-c000.snappy.parquet  part-00001-70e30524-508e-4c96-a81a-18c338527bcb-c000.snappy.parquet
(+12 files in other folders)
