[project]
name = "bigdata-class"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kagglehub>=1.0.1",
    "mrjob>=0.7.4",
    "pandas>=3.0.1",
    "pyspark>=4.1.2",
    "setuptools>=82.0.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
